# invoice-extractor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deliverables/: accuracy.csv  comparison_report.csv  output.csv  summary.csv
gold/: gold_labels.csv
scripts/: download_invoices.py  evaluate.py  smoke_azure.py  smoke_llm.py
src/invoice_extractor/: __init__.py  cli.py  compare.py  config.py  csv_writer.py  evaluate.py  llm.py  models.py  normalize.py  ocr.py  reconcile.py  runner.py
src/invoice_extractor/pipelines/: __init__.py  azure_pipeline.py  base.py  llm_pipeline.py  rules_pipeline.py
tests/: test_azure_pipeline.py  test_compare.py  test_csv_writer.py  test_evaluate.py  test_integration.py  test_llm_pipeline.py  test_models.py  test_normalize.py  test_ocr.py  test_reconcile.py  test_registry.py  test_rules_pipeline.py  test_runner.py
